[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/font_pc_text.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/btn_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/images/btn/opt.png" type="Texture" id=3]
[ext_resource path="res://scripts/Options.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifLabel" type="Label" parent="."]
margin_left = 149.255
margin_top = 25.1938
margin_right = 293.255
margin_bottom = 36.1938
custom_fonts/font = SubResource( 1 )
text = "Easy Normal Hard Extreme"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumLabel" type="Label" parent="."]
margin_left = 142.881
margin_top = 73.8811
margin_right = 265.881
margin_bottom = 85.8811
custom_fonts/font = SubResource( 2 )
text = "   0  1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumLabel2" type="Label" parent="."]
margin_left = 142.881
margin_top = 73.8811
margin_right = 265.881
margin_bottom = 85.8811
custom_fonts/font = SubResource( 2 )
text = "         2  3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 7.0
margin_top = 42.0
margin_right = 67.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 3 )
text = "Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 7.22717
margin_top = 92.267
margin_right = 37.2272
margin_bottom = 105.267
custom_fonts/font = SubResource( 3 )
text = "Music"

[node name="Label3" type="Label" parent="."]
margin_left = 6.97269
margin_top = 132.567
margin_right = 27.9727
margin_bottom = 144.567
custom_fonts/font = SubResource( 3 )
text = "sfx"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="HSlider" parent="."]
margin_left = 154.0
margin_top = 38.0
margin_right = 413.0
margin_bottom = 86.0
rect_scale = Vector2( 0.5, 0.5 )
custom_icons/tick = ExtResource( 3 )
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
max_value = 75.0
step = 25.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficultybar" type="HSlider" parent="."]
margin_left = 154.194
margin_top = 89.1617
margin_right = 336.194
margin_bottom = 137.162
rect_scale = Vector2( 0.5, 0.5 )
custom_icons/tick = ExtResource( 3 )
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
max_value = 75.0
step = 25.0
ticks_on_borders = true

[node name="SfxVolume" type="HSlider" parent="."]
margin_left = 154.194
margin_top = 125.724
margin_right = 336.194
margin_bottom = 173.724
rect_scale = Vector2( 0.5, 0.5 )
custom_icons/tick = ExtResource( 3 )
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
max_value = 75.0
step = 25.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -38.0
margin_right = 38.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 7 )
text = "options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.5
margin_top = -29.0
margin_right = 48.5
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "< back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="Difficultybar" to="." method="_on_Difficultybar_value_changed"]
[connection signal="value_changed" from="SfxVolume" to="." method="_on_SfxVolume_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
